...
            when (val result = createOngInteractor(name)) {
                is Result.Success -> {
                    _uiState.update { it.copy(isLoading = false, isOngCreated = true) }
                }
                is Result.Error -> {
                    val message = if (result.exception is IOException) {
                        "Não foi possível se conectar ao servidor."
                    } else {
                        result.exception.message ?: "Não foi possível comunicar com o servidor. Tente novamente mais tarde."
                    }
                    _uiState.update { it.copy(isLoading = false, userMessage = message) }
                }
                is Result.Loading -> {
...
